# djlintr

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  opencode.json  plan.md  pyproject.toml  test_djlint_collapse.py
.github/: dependabot.yml
.github/workflows/: ci.yml  pypi.yml
bench_files/: file_47.html
benches/: linter_bench.rs
scripts/: compare_lint.py  compare_reformat.py  fetch_test_data.sh
src/: config.rs  lib.rs  main.rs  tags.rs  tags2.rs
src/formatter/: mod.rs  predicates.rs  tag_format.rs  tokenizer.rs  tree.rs
src/linter/: mod.rs
tests/: a_tag_wrap_debug.rs  a_tag_wrap_minimal.rs  attribute_rules.rs  attribute_wrapping.rs  batch_1_rules.rs  batch_2_rules.rs  batch_3_rules.rs  case_rules.rs  custom_blocks.rs  debug_tokens.rs  django_linter.rs  djlint_off.rs  dotted_component_tags.rs  formatter_basics.rs  image_rules.rs  linter_h005.rs  minimal_parity.rs  parity_regressions.rs  reformat_parity.rs  reproduce_attr_wrap_boundary.rs  reproduce_circle_tag_collapsing.rs  reproduce_closing_inline_chain_indent.rs  reproduce_component_collapse_indent_leak.rs  reproduce_component_inside_div.rs  reproduce_django_collapse.rs  reproduce_django_comment_verbatim.rs  reproduce_django_var_space.rs  reproduce_email_newlines.rs  reproduce_for_collapse_line_length.rs  reproduce_h014.rs  reproduce_h025.rs  reproduce_indent_tracking.rs  reproduce_inline_closing_newline.rs  reproduce_max_line_length_wrap.rs  reproduce_mismatches.rs  reproduce_multiline_a_tag_indent.rs  reproduce_multiline_content_expansion.rs  reproduce_multiline_inline_content.rs  reproduce_script_close_indent.rs  reproduce_script_issue.rs  (+22 more)
tests/parity_data/: djlint_off.html
tests/parity_data/extra/: attr_if_block_no_spaces.html  attrs_inside_template_conditional.html  block_parent_collapse_ignores_line_length.html  block_tag_inline_content.html  duplicate.html  h012.html  inline_element_content_collapsing.html  inline_tag_last_line_indent.html  test_colon.html  test_digit.html  test_gt.html  test_html.html  test_jump.html  test_multi.html  test_rev.html  test_second.html  test_spaces.html  (+5 more)
(+101 files in other folders)
