[package]
name = "djlintr"
version = "0.5.11"
edition = "2021"
license = "BSD-3-Clause"
description = "A fast linter and formatter for Django templates written in Rust."
repository = "https://github.com/thraxil/djlintr"
publish = false

[dependencies]
regex = "1.10"
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
anyhow = "1.0"
colored = "3.1"
indicatif = { version = "0.18", features = ["rayon"] }

[dev-dependencies]
rstest = "0.26"
criterion = "0.8"

[[bench]]
name = "linter_bench"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true

[package.metadata.release]
release = true
tag = true
push = true
pre-release-commit-message = "chore: release v{{version}}"
tag-name = "v{{version}}"
tag-message = "Release v{{version}}"
consolidate-commits = false
